# projeto_p2

./: README.md  hash.c  hash.h  heap.c  heap.h  huff.c  huffman.c  planejamento.txt  plot.r  red_black_tree.c
Estruturas/: red_black_tree.c
Estruturas/list x abb/: main  main.c  script.r
Estruturas/listxabb/: .RData  .Rhistory  main  main.c  saida_bt.csv  saida_list.csv  script.r
Estruturas/red black/: .~lock.Seminário.pdf#  Apresentação.pptx
Huffman/: CMakeLists.txt  archive_test  archive_test.huff  archive_test.txt  arq  arq.huff  arq.txt  arq.txt.huff  binary_tree.c  binary_tree.h  compress.c  compress.h  confidencial  confidencial.jpg.huff  descompres.c  descompress.c  descompress.h  hash.c  hash.h  heap.c  huffman  huffman.c  huffman.h  main  main.c  makefile  patrick  patrick.huff  patrick.jpg.huff  test_cunit  test_huff_text  teste.huff  teste.txt
Huffman/huffman_base/: huffman.h  main.c
Huffman/huffman_base/compress/: compress.c  compress.h
Huffman/huffman_base/descompress/: descompress.c  descompress.h
Huffman/structures/binary_tree/: binary_tree.c
Huffman/structures/hash/: hash.c
Huffman/structures/heap/: heap.c  heap.h
Huffman/test/: test_cunit.c  test_txt_huffman.c
